added some fixes to CartItem and Order support and updated cart endpoints as public also added X-Client-Id and added clientId generation on the front end, it is saved as a token in localStorage